force-app/main/default/objects/Contenido_Planilla_IHSS_Temporal__c/Contenido_Planilla_IHSS_Temporal__c.object-meta.xml
<CustomObject>
    <label>Contenido Planilla IHSS Temporal</label>
    <nameField>
        <label>Nombre de Contenido Planilla IHSS Tempor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contenido Planilla IHSS Temporal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>