force-app/main/default/objects/Contenido_Planilla_IHSS_Temporal__c/fields/Fecha_Cambio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cambio__c</fullName>
    <label>Fecha Cambio</label>
    <type>Date</type>
</CustomField>