force-app/main/default/objects/Contenido_Planilla_IHSS_Temporal__c/fields/Primer_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Primer_Apellido__c</fullName>
    <label>Primer_Apellido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>