force-app/main/default/objects/Contenido_Planilla_IHSS_Temporal__c/fields/Primer_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Primer_Nombre__c</fullName>
    <label>Primer_Nombre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>