force-app/main/default/objects/Contenido_Planilla_IHSS_Temporal__c/fields/RTN__c.field-meta.xml
<CustomField>
    <fullName>RTN__c</fullName>
    <label>RTN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>