force-app/main/default/objects/Contenido_Planilla_IHSS_Temporal__c/fields/Segundo_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Apellido__c</fullName>
    <label>Segundo_Apellido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>