force-app/main/default/objects/Contenido_Planilla_IHSS_Temporal__c/fields/Tipo_Cambio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cambio__c</fullName>
    <label>Tipo_Cambio</label>
    <length>1</length>
    <type>Text</type>
</CustomField>